--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,12 @@
 h1::selection {
 	background: #f79725;
 }
+h2::selection {
+	background: #f79725;
+}
+h3::selection {
+	background: #f79725;
+}
 small::selection {
 	background: #f79725;
 }
@@ -341,7 +347,7 @@ position: relative;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-top:100px;
+	margin-top:50px;
 	
 }
 .bads-tiitle{
@@ -350,7 +356,6 @@ position: relative;
 	font-weight: bold;
 	line-height: 1.2;
 	text-align: left;
-	margin-bottom: 30px;
 	position: relative;
 	margin-bottom: 60px;
 }
@@ -446,39 +451,78 @@ left:-0.5em;
 	z-index: 2;
 	position: relative;
 }
-.servis-container:before{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-image: url('/img/bg-services.png');
-	left: -30%;
-	bottom: 0;
-	background-size: cover;
-	z-index: -1;
-}
 .service-card{
 	width: 45%;
 	display: flex;
 	flex-direction: row;
 	margin: 25px;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: space-between;
+	position: relative;
 }
 .service-img{
 	width: 50%;
 	height: 220px;
+}
+.service-image{
 	object-fit: cover;
-	background-color:#fdbe71;
+	width: 100%;
+	height: 220px;
 }
 .service-text{
 	width: 45%;
 }
+.service-text:before{
+	content: '';
+	width: 50%;
+	margin-left: -25px;
+	height: 100%;
+	top:0;
+	border-left:2px solid rgb(247, 151, 37,0.5);
+	position: absolute;
+	background-image:linear-gradient(to right,	rgba(247, 151, 37,0.15),#ffffff);
+	z-index: -1;
+}
 .servise-text-descr {
   font-size: 16px;
-  line-height: 1.2;
+	line-height: 1.2;
+	margin-bottom: 30px;
 
 }
+
+.servise-link{
+	font-size: 14px;
+
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #616161;
+	background-color: #fff;
+	/* border-bottom: 2px solid #f79725;
+	background-color:rgba(247, 151, 37,0.1);
+	transition: 0.5s; */
+	border: rgba(247, 151, 37,0.7) 2px solid;
+	border-radius: 30px;
+	padding: 6px 12px 6px 12px;
+	box-shadow: 0px 5px 10px rgba(61, 60, 59, 0.16);
+	transition: all 3s, 0.7s ease-in-out;
+	user-select: none;
+}
+.servise-link:hover{
+	box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.0);
+	outline: none;
+	cursor: pointer;
+}
+
+
+	/* .servise-link:before {
+		content: '>';
+		position: absolute;
+		top:0px;
+		right: -15px;
+		color: #f79725;
+
+	} */
+	
 
 
 
@@ -613,7 +657,21 @@ left:-0.5em;
 	margin-top: 8px;
 }
 
+@media (max-width:1200px) and (min-width:1000px){
+	.servise-tiitle {
+		margin-top: 5px!important;
+		margin-bottom: 5px;
+	}
+	.servise-text-descr{
+		margin-top: 5px!important;
+		margin-bottom: 5px;
+	}
 
+	.servise-text-descr {
+		margin-bottom: 20px;
+	
+	}
+}
 
 @media (max-width:1010px){
 	.main-menu-container{
@@ -702,17 +760,35 @@ left:-0.5em;
 	color:#f79725;
 }
 @media (max-width: 1010px){
-	.main-hero{
-		fill: #f79725;
+	.about-section{
+		margin-top: 60px;
+		margin-bottom: 60px;
+		display: flex;
+		justify-content: space-around;
+		flex-direction: column;
+		align-items: center;
 	}
-	.ie-main-hero{
-		position: absolute;
-		top: 0;
-		right: 0;
-		min-width: 100%;
-		min-height: 100%;
-		margin: 0;
-		opacity: 0.3;
+	.about-section-img{
+		order: 2;
+		margin-top: 30px;
+	}
+	.about-section-text{
+		order:1;
+	}
+	.about-section-text{
+		max-width:80%;
+	}
+	.about-section-img{
+		max-width:95%;
+	}
+	.service-card{
+		width: 95%;
+		display: flex;
+		flex-direction: row;
+		margin: 25px;
+		align-items: flex-start;
+		justify-content: space-between;
+		position: relative;
 	}
 	.menu-btn{
 		display:flex;
